jimage - don't skip duplicates

--- a/src/jdk.dev/share/classes/jdk/jigsaw/tools/jimage/resources/jimage.properties
+++ b/src/jdk.dev/share/classes/jdk/jigsaw/tools/jimage/resources/jimage.properties
@@ -1,15 +1,26 @@
 main.usage.summary=\
-Usage: {0} <list|expand> <options> jimages...\n\
+Usage: {0} <list|expand|info|verify> <options> jimages...\n\
 use --help for a list of possible options
 
 main.usage=\
-Usage: {0} <list|expand> <options> jimages...\n\
+Usage: {0} <list|expand|info|verify> <options> jimages...\n\
+\n\
+\  list   - Prints the names of all the entries in the jimage.  When used with\n\
+\           --verbose will also print entry attributes ex. size and offset.\n\
+\  expand - Expand all jimage entries into separate files into the directory\n\
+\           specified by --directory=<dir> (default='.')\n\
+\  info   - Prints information specified in the jimage header.\n\
+\  verify - Reports errors on any .class entries that don't verify as classes.\n\
+\n\
 Possible options include:
 
 error.prefix=Error:
 warn.prefix=Warning:
 
-main.opt.version=\
+main.opt.dir=\
+\  --dir                                Target directory for expansion
+
+main.opt.verbose=\
 \  --verbose                            Verbose listing
 
 main.opt.help=\
@@ -18,8 +29,7 @@ main.opt.help=\
 main.opt.version=\
 \  --version                            Version information
 
-
-err.invalid.task=task must be list|expand: {0}
+err.invalid.task=task must be list|expand|info|verify: {0}
 err.cannot.create.dir=cannot create directory: {0}
 err.not.a.jimage=not a jimage file: {0}
 err.unknown.option=unknown option: {0}
