--- a/src/jdk.dev/share/classes/jdk/jigsaw/tools/jimage/resources/jimage.properties
+++ b/src/jdk.dev/share/classes/jdk/jigsaw/tools/jimage/resources/jimage.properties
@@ -1,15 +1,16 @@
 main.usage.summary=\
-Usage: {0} <list|expand|info|verify> <options> jimages...\n\
+Usage: {0} <create|expand|info|list|verify> <options> jimages...\n\
 use --help for a list of possible options
 
 main.usage=\
-Usage: {0} <list|expand|info|verify> <options> jimages...\n\
+Usage: {0} <create|expand|info|list|verify> <options> jimages...\n\
 \n\
+\  create - Constructs a new jimage from the supplied directory (--dir)\n\
+\  expand - Expand all jimage entries into separate files into the directory\n\
+\           specified by --dir=<directory> (default='.')\n\
+\  info   - Prints information specified in the jimage header.\n\
 \  list   - Prints the names of all the entries in the jimage.  When used with\n\
 \           --verbose will also print entry attributes ex. size and offset.\n\
-\  expand - Expand all jimage entries into separate files into the directory\n\
-\           specified by --directory=<dir> (default='.')\n\
-\  info   - Prints information specified in the jimage header.\n\
 \  verify - Reports errors on any .class entries that don't verify as classes.\n\
 \n\
 Possible options include:
@@ -18,7 +19,7 @@ error.prefix=Error:
 warn.prefix=Warning:
 
 main.opt.dir=\
-\  --dir                                Target directory for expansion
+\  --dir                                Target directory for create/expand
 
 main.opt.verbose=\
 \  --verbose                            Verbose listing
@@ -30,6 +31,11 @@ main.opt.version=\
 \  --version                            Version information
 
 err.invalid.task=task must be list|expand|info|verify: {0}
+err.not.a.dir=not a directory: {0}
+err.jimage.not.specified=no jimage specified
+err.only.one.jimage=only one jimage should be specified
+err.jimage.already.exists=jimage already exists: {0}
+err.cannot.read.file=cannot read file: {0}
 err.cannot.create.dir=cannot create directory: {0}
 err.not.a.jimage=not a jimage file: {0}
 err.unknown.option=unknown option: {0}
