com.sun.jarsigner should be exported, CCC-4500302

--- a/make/modules/tools/src/com/sun/tools/classanalyzer/resources/modules.properties
+++ b/make/modules/tools/src/com/sun/tools/classanalyzer/resources/modules.properties
@@ -325,6 +325,7 @@ profile_4_exported.packages = \
    com.sun.java.accessibility.util
 
 profile_5_exported.packages = \
+   com.sun.jarsigner \
    com.sun.jdi \
    com.sun.jdi.connect \
    com.sun.jdi.connect.spi \
