Made jimage acceptable as boot jdk

--- a/common/autoconf/spec.gmk.in
+++ b/common/autoconf/spec.gmk.in
@@ -260,7 +260,7 @@ BUILD_HOTSPOT=@BUILD_HOTSPOT@
 # The boot jdk to use
 BOOT_JDK:=@BOOT_JDK@
 BOOT_RTJAR:=@BOOT_RTJAR@
-BOOT_TOOLSJAR=$(BOOT_JDK)/lib/tools.jar
+BOOT_TOOLSJAR=@BOOT_TOOLSJAR@
 
 BUILD_JDK:=@BUILD_JDK@
 
