Change jlink to use --addmods instead of --mods

--- a/src/jdk.dev/share/classes/jdk/jigsaw/tools/jlink/resources/jlink.properties
+++ b/src/jdk.dev/share/classes/jdk/jigsaw/tools/jlink/resources/jlink.properties
@@ -27,11 +27,11 @@ main.opt.config=\
 main.opt.mid=\
 \  --mid <mid>                          Module id
 
-main.opt.module-path=\
-\  --module-path <modulepath>           Module path
+main.opt.modulepath=\
+\  --modulepath <modulepath>            Module path
 
-main.opt.mods=\
-\  --mods <module-names>                Comma separated list of module names
+main.opt.addmods=\
+\  --addmods <module-names>             Comma separated list of module names
 
 main.opt.output=\
 \  --output <path>                      Location of output path
