fix missing resource keys

--- a/src/jdk.compiler/share/classes/com/sun/tools/javac/resources/compiler.properties
+++ b/src/jdk.compiler/share/classes/com/sun/tools/javac/resources/compiler.properties
@@ -2234,6 +2234,9 @@ compiler.misc.kindname.class=\
 compiler.misc.kindname.package=\
     package
 
+compiler.misc.kindname.module=\
+    module
+
 compiler.misc.kindname.static.init=\
     static initializer
 
@@ -2332,6 +2335,12 @@ compiler.misc.inapplicable.method=\
 ########################################
 # Diagnostics for language feature changes
 ########################################
+
+# 0: string
+compiler.err.modules.not.supported.in.source=\
+   modules are not supported in -source {0}\n\
+    (use -source 9 or higher to enable modules)
+
 # 0: string
 compiler.misc.diamond.and.anon.class.not.supported.in.source=\
     cannot use ''<>'' with anonymous inner classes in -source {0}\n\
@@ -2664,6 +2673,9 @@ compiler.err.dc.unterminated.string=\
 
 ###
 # errors related to modules
+
+compiler.err.expected.module=\
+    expected ''module''
 
 # 0: symbol
 compiler.err.module.not.found=\
