--- a/src/jdk.compiler/share/classes/com/sun/tools/javac/resources/javac.properties
+++ b/src/jdk.compiler/share/classes/com/sun/tools/javac/resources/javac.properties
@@ -39,14 +39,24 @@ javac.opt.deprecation=\
     Output source locations where deprecated APIs are used
 javac.opt.classpath=\
     Specify where to find user class files and annotation processors
+javac.opt.modulepath=\
+    Specify where to find user module class files
 javac.opt.sourcepath=\
-    Specify where to find input source files
+    Specify where to find input source files for a single module
+javac.opt.modulesourcepath=\
+    Specify where to find input source files for multiple modules
 javac.opt.bootclasspath=\
     Override location of bootstrap class files
+javac.opt.systemmodulepath=\
+    Override location of system module class files
+javac.opt.upgrademodulepath=\
+    Override location of upgradeable module class files
 javac.opt.Xbootclasspath.p=\
     Prepend to the bootstrap class path
 javac.opt.Xbootclasspath.a=\
     Append to the bootstrap class path
+javac.opt.Xoverride=\
+    Specify location of overriding module class files
 javac.opt.endorseddirs=\
     Override location of endorsed standards path
 javac.opt.extdirs=\
@@ -93,6 +103,10 @@ javac.opt.arg.key.equals.value=\
     key[=value]
 javac.opt.arg.path=\
     <path>
+javac.opt.arg.mspath=\
+    <module-source-path>
+javac.opt.arg.jdk=\
+    <jdk>|none
 javac.opt.arg.dirs=\
     <dirs>
 javac.opt.arg.directory=\
@@ -285,6 +299,8 @@ javac.err.invalid.target=\
     invalid target release: {0}
 javac.err.option.not.allowed.with.target=\
     option {0} not allowed with target {1}
+javac.err.option.too.many=\
+    option {0} can only be specified once
 javac.err.no.source.files=\
     no source files
 javac.err.no.source.files.classes=\
