ant clean test did not even start. Fixed few things to progress now. 37 tests still fail.

--- a/make/project.properties
+++ b/make/project.properties
@@ -124,12 +124,14 @@ test.module.imports=\
     jdk.scripting.nashorn/jdk.nashorn.internal.parser,\
     jdk.scripting.nashorn/jdk.nashorn.internal.objects,\
     jdk.scripting.nashorn/jdk.nashorn.internal.runtime,\
+    jdk.scripting.nashorn/jdk.nashorn.internal.runtime.linker,\
     jdk.scripting.nashorn/jdk.nashorn.internal.runtime.events,\
     jdk.scripting.nashorn/jdk.nashorn.internal.runtime.options,\
     jdk.scripting.nashorn/jdk.nashorn.internal.runtime.regexp,\
     jdk.scripting.nashorn/jdk.nashorn.internal.runtime.regexp.joni,\
     jdk.scripting.nashorn/jdk.nashorn.tools,\
     jdk.scripting.nashorn/jdk.internal.dynalink.beans,\
+    jdk.scripting.nashorn/jdk.internal.dynalink.linker,\
     java.base/jdk.internal.org.objectweb.asm
 
 meta.inf.dir=${src.dir}/META-INF
