Initial service provider consistency checks for jar tool

--- a/src/jdk.jartool/share/classes/sun/tools/jar/resources/jar.properties
+++ b/src/jdk.jartool/share/classes/sun/tools/jar/resources/jar.properties
@@ -60,6 +60,8 @@ error.module.options.without.info=\
         One of --module-version or --hash-dependences without module-info.class
 error.unexpected.module-info=\
         Unexpected module descriptor {0}
+error.missing.provider=\
+        Service provider not found: {0}
 out.added.manifest=\
         added manifest
 out.added.module-info=\
