Update java -X output for new -XaddExports value

--- a/src/java.base/share/classes/sun/launcher/resources/launcher.properties
+++ b/src/java.base/share/classes/sun/launcher/resources/launcher.properties
@@ -118,10 +118,11 @@ java.launcher.X.usage=\
 \                      show all property settings and continue\n\
 \    -XshowSettings:locale\n\
 \                      show all locale related settings and continue\n\
-\    -XaddExports:<exports>\n\
-\                      export packages from modules, regardless of module declarations.\n\
-\                      <exports> is a comma separated list of <modulename>/<package>\n\
-\                      to export\n\
+\    -XaddExports:<additional exports, separated by a comma>\n\
+\                      export packages from modules to other modules, regardless\n\
+\                      of module declarations. The value is a comma separated\n\
+\                      list of <source>/<package>=<target> where <target>\n\
+\                      may have the value ALL-UNNAMED\n\
 \    -Xoverride:<dir>  directory of module names, each containing class files to\n\
 \                      override the classes in modules that are in the initial\n\
 \                      configuration\n\
