SQE logged bugs - JDK-8085961, JDK-8082585, JDK-8085963

--- a/src/jdk.jlink/share/classes/jdk/tools/jlink/resources/plugins.properties
+++ b/src/jdk.jlink/share/classes/jdk/tools/jlink/resources/plugins.properties
@@ -8,7 +8,7 @@ Resource compression. Allows to achieve best compression or balance compression 
 1: ZIP+Constant strings sharing, 55%+ size reduction, small startup impact\n \
 By default, all resources are compressed. You can express the set of resources to \
 compress or not compress (use ^ for negation).\n \
-eg: --compress on --compress-filter *Exception.class,*Error.class,^/java.base/java/lang/* --compress-level 0
+eg: --{0} on --{0}-filter *Exception.class,*Error.class,^/java.base/java/lang/* --{0}-level 0
 
 compress-resources.argument=<on|off>
 
@@ -20,15 +20,15 @@ compress or not compress (use ^ for negation).\
 
 exclude-files.argument=<list of files to escape>
 
-exclude-files.description=Exclude files from the image. eg: --exclude-files *.diz, /java.base/native/client/*
+exclude-files.description=Exclude files from the image. eg: --{0} *.diz, /java.base/native/client/*
 
 exclude-resources.argument=<list of resource paths to escape>
 
-exclude-resources.description=Exclude resources from jimage file. eg: --exclude-resources *.jcov, */META-INF/*
+exclude-resources.description=Exclude resources from jimage file. eg: --{0} *.jcov, */META-INF/*
 
 sort-resources.argument=<list of resource paths in priority order>
 
-sort-resources.description=Order resources should appear in jimage file. eg: --sort-resources */modules-info.class, /java-base/java/lang/*
+sort-resources.description=Order resources should appear in jimage file. eg: --{0} */modules-info.class, /java-base/java/lang/*
 
 strip-java-debug.description=Strip debug information from class files.
 
