jlink copy file option

--- a/src/jdk.jlink/share/classes/jdk/tools/jlink/resources/plugins.properties
+++ b/src/jdk.jlink/share/classes/jdk/tools/jlink/resources/plugins.properties
@@ -77,3 +77,15 @@ main.plugin.no.value=\
 \<empty>
 
 err.plugin.mutiple.options=More than one plugin enabled by {0} option
+
+jlink-default-image-builder.copy-files=<List of JDK files/directories to copy to the image>. \
+\neg: jrt-fs.jar,LICENSE,man
+
+jlink-default-image-builder.genbom=\
+\nTo generate a file containing information on jlink
+
+main.default.image.builder.name=\
+Default Image Builder
+
+main.image.builder.name=\
+Image Builder Name
