jlink plugins modulepath option based on Layer. Removed legacy Classloader based classpath Reviewed-by: jlaskey

--- a/src/jdk.jlink/share/classes/jdk/tools/jlink/resources/plugins.properties
+++ b/src/jdk.jlink/share/classes/jdk/tools/jlink/resources/plugins.properties
@@ -49,6 +49,9 @@ main.opt.list-plugins=\
 main.opt.plugins-configuration=\
 \  --plugins-configuration              Path to plugins configuration properties file
 
+main.plugins-modulepath=\
+\  --plugins-modulepath                 Custom plugins module path
+
 main.plugin.name=\
 \Plugin Name
 
@@ -77,6 +80,8 @@ main.plugin.no.value=\
 \<empty>
 
 err.plugin.mutiple.options=More than one plugin enabled by {0} option
+
+err.no.plugins.path=No plugins path argument.
 
 jlink-default-image-builder.copy-files=<List of JDK files/directories to copy to the image>. \
 \neg: jrt-fs.jar,LICENSE,man
