Reworked ImageBuilder API. Removed proto copy-files by a Plugin to copy files/dirs from various locations.

--- a/src/jdk.jlink/share/classes/jdk/tools/jlink/resources/plugins.properties
+++ b/src/jdk.jlink/share/classes/jdk/tools/jlink/resources/plugins.properties
@@ -18,6 +18,17 @@ compact-cp.description=Java Class's Constant Pool strings sharing.By default, \
 all resources are compressed. You can express the set of resources to \
 compress or not compress (use ^ for negation).\
 
+copy-files.argument=<List of <file path>=<image target> to copy to the image>.
+
+copy-files.description=Copy files. If files to copy are not absolute path, use JDK home dir.\n\
+eg: jrt-fs.jar,LICENSE,/home/me/myfile.txt=somewehere/conf.txt
+
+default-image-builder.description=\
+Default image layout.
+
+default-image-builder.genbom=\
+To generate a file containing information on jlink.
+
 exclude-files.argument=<list of files to escape>
 
 exclude-files.description=Exclude files from the image. eg: --{0} *.diz, /java.base/native/client/*
@@ -83,14 +94,11 @@ err.plugin.mutiple.options=More than one plugin enabled by {0} option
 
 err.no.plugins.path=No plugins path argument.
 
-jlink-default-image-builder.copy-files=<List of JDK files/directories to copy to the image>. \
-\neg: jrt-fs.jar,LICENSE,man
-
-jlink-default-image-builder.genbom=\
-\nTo generate a file containing information on jlink
-
-main.default.image.builder.name=\
-Default Image Builder
-
 main.image.builder.name=\
 Image Builder Name
+
+main.image.builder.description=\
+Image Builder Description
+
+main.image.builders=\
+Options bound to the image builder in use.
