ZIP alone for compression level 1.Filtering patterns in a file and command line,idem for sorting. Resource filtering, concatenate patterns instead of iterating. 10x faster than current implementation. Generalise Predicate usage, get us some reusability and extensibility. Reviewed-by: jlaskey

--- a/src/jdk.jlink/share/classes/jdk/tools/jlink/resources/plugins.properties
+++ b/src/jdk.jlink/share/classes/jdk/tools/jlink/resources/plugins.properties
@@ -1,11 +1,12 @@
-compress-resources.compress-resources-filter=<0|1>
+compress-resources.compress-resources-level=<0|1|2>
 
-compress-resources.compress-resources-level=<comma separated list of resource paths>
+compress-resources.compress-resources-filter=<comma separated list of resource paths | path to a file containing the list of resource paths>
 
 compress-resources.description=\
 Resource compression. Allows to achieve best compression or balance compression with startup time.\n \
 0: Constant strings sharing, 30% size reduction, negligeable startup impact\n \
-1: ZIP+Constant strings sharing, 55%+ size reduction, small startup impact\n \
+1: ZIP compression, around 50%+ size reduction, small startup impact\n \
+2: ZIP+Constant strings sharing, 55%+ size reduction, small startup impact\n \
 By default, all resources are compressed. You can express the set of resources to \
 compress or not compress (use ^ for negation).\n \
 eg: --{0} on --{0}-filter *Exception.class,*Error.class,^/java.base/java/lang/* --{0}-level 0
@@ -29,15 +30,15 @@ Default image layout.
 default-image-builder.genbom=\
 To generate a file containing information on jlink.
 
-exclude-files.argument=<list of files to escape>
+exclude-files.argument=<list of files to escape | path to a file containing the list of files to escape>
 
 exclude-files.description=Exclude files from the image. eg: --{0} *.diz, /java.base/native/client/*
 
-exclude-resources.argument=<list of resource paths to escape>
+exclude-resources.argument=<list of resource paths to escape | path to a file containing the list of files to escape>
 
 exclude-resources.description=Exclude resources from jimage file. eg: --{0} *.jcov, */META-INF/*
 
-sort-resources.argument=<list of resource paths in priority order>
+sort-resources.argument=<list of resource paths in priority order | path to file containing ordered resource paths>
 
 sort-resources.description=Order resources should appear in jimage file. eg: --{0} */modules-info.class, /java-base/java/lang/*
 
