8132162: javac won't show error if we specify not-existent directory in modulesourcepath

--- a/src/jdk.compiler/share/classes/com/sun/tools/javac/resources/compiler.properties
+++ b/src/jdk.compiler/share/classes/com/sun/tools/javac/resources/compiler.properties
@@ -1413,6 +1413,10 @@ compiler.warn.constant.SVUID=\
 compiler.warn.dir.path.element.not.found=\
     bad path element "{0}": no such directory
 
+# 0: file name
+compiler.warn.dir.path.element.not.directory=\
+    bad path element "{0}": not a directory
+
 compiler.warn.finally.cannot.complete=\
     finally clause cannot complete normally
 
