improve javac handling of packages in modules

--- a/src/jdk.compiler/share/classes/com/sun/tools/javac/resources/compiler.properties
+++ b/src/jdk.compiler/share/classes/com/sun/tools/javac/resources/compiler.properties
@@ -2717,6 +2717,10 @@ compiler.err.unexpected.after.module=\
     unexpected input after module declaration
 
 # 0: symbol
+compiler.warn.package.in.other.module.1=\
+    package exists in another module: {0}
+
+# 0: list of symbol
 compiler.warn.package.in.other.module=\
     package exists in another module: {0}
 
