initial support for javac -Xmodule:MODULE

--- a/src/jdk.compiler/share/classes/com/sun/tools/javac/resources/compiler.properties
+++ b/src/jdk.compiler/share/classes/com/sun/tools/javac/resources/compiler.properties
@@ -2716,6 +2716,15 @@ compiler.err.module.decl.sb.in.module-info.java=\
 compiler.err.unexpected.after.module=\
     unexpected input after module declaration
 
+compiler.err.module-info.with.xmodule.sourcepath=\
+    illegal combination of -Xmodule and module-info on sourcepath
+
+compiler.err.module-info.with.xmodule.classpath=\
+    illegal combination of -Xmodule and module-info on classpath
+
+compiler.err.xmodule.no.module.sourcepath=\
+    illegal combination of -Xmodule and -modulesourcepath
+
 # 0: symbol
 compiler.warn.package.in.other.module.1=\
     package exists in another module: {0}
