--- a/src/jdk.compiler/share/classes/com/sun/tools/javac/resources/javac.properties
+++ b/src/jdk.compiler/share/classes/com/sun/tools/javac/resources/javac.properties
@@ -282,6 +282,10 @@ javac.opt.addExports=\
     <exports> is a comma-separated list of <module-name>/<package-name>
 javac.opt.arg.addExports=\
     <exports>
+javac.opt.module=\
+    Specify a module to which the classes being compiled belong
+javac.opt.arg.module=\
+    <module-name>
 javac.opt.Xoverride=\
     Specify where to find classes to override classes in modules
 
