8133131: Bad -XaddExport causes and exception

--- a/src/jdk.compiler/share/classes/com/sun/tools/javac/resources/compiler.properties
+++ b/src/jdk.compiler/share/classes/com/sun/tools/javac/resources/compiler.properties
@@ -2756,6 +2756,10 @@ compiler.misc.locn.module_path=\
 compiler.misc.cant.resolve.modules=\
     cannot resolve modules
 
+# 0: symbol
+compiler.err.cant.find.module=\
+    cannot find module: {0}
+
 ###
 # errors related to options
 
