Fix for 8133203: --class-path is a required option for jmod

--- a/src/jdk.jlink/share/classes/jdk/tools/jmod/resources/jmod.properties
+++ b/src/jdk.jlink/share/classes/jdk/tools/jmod/resources/jmod.properties
@@ -25,6 +25,7 @@ main.opt.main-class=Main class
 main.opt.main-class.arg=main-class
 main.opt.hash-dependences=Compute and record hashes of dependences matched by the pattern
 
+err.classpath.must.be.specified=--class-path must be specified
 err.jmod.must.be.specified=jmod-file must be specified
 err.missing.task=one of create or list must be specified
 err.invalid.task=task must be create|list: {0}
