updates for resolveBinaryNameOrIdent

--- a/src/jdk.compiler/share/classes/com/sun/tools/javac/resources/compiler.properties
+++ b/src/jdk.compiler/share/classes/com/sun/tools/javac/resources/compiler.properties
@@ -2760,6 +2760,10 @@ compiler.misc.cant.resolve.modules=\
 compiler.err.cant.find.module=\
     cannot find module: {0}
 
+# 0: string
+compiler.err.invalid.module.specifier=\
+    module specifier not allowed: {0}
+
 ###
 # errors related to options
 
