Automatically create a buildjdk for jmod and jlink when crosscompiling

--- a/common/autoconf/spec.gmk.in
+++ b/common/autoconf/spec.gmk.in
@@ -240,6 +240,14 @@ BUILD_VARIANT_RELEASE:=@BUILD_VARIANT_RELEASE@
 BUILD_OUTPUT:=@BUILD_OUTPUT@
 # Colon left out to be able to override IMAGES_OUTPUTDIR for bootcycle-images
 SUPPORT_OUTPUTDIR=$(BUILD_OUTPUT)/support
+GENSRC_OUTPUTDIR=$(SUPPORT_OUTPUTDIR)/gensrc
+HEADERS_OUTPUTDIR=$(SUPPORT_OUTPUTDIR)/headers
+NATIVE_OUTPUTDIR=$(SUPPORT_OUTPUTDIR)/native
+MODULES_CMDS_OUTPUTDIR=$(SUPPORT_OUTPUTDIR)/modules_cmds
+MODULES_CONF_OUTPUTDIR=$(SUPPORT_OUTPUTDIR)/modules_conf
+MODULES_INCLUDE_OUTPUTDIR=$(SUPPORT_OUTPUTDIR)/modules_include
+MODULES_LIBS_OUTPUTDIR=$(SUPPORT_OUTPUTDIR)/modules_libs
+
 BUILDTOOLS_OUTPUTDIR=$(BUILD_OUTPUT)/buildtools
 
 HOTSPOT_OUTPUTDIR=$(BUILD_OUTPUT)/hotspot
@@ -249,6 +257,7 @@ TESTMAKE_OUTPUTDIR=$(BUILD_OUTPUT)/test-make
 MAKESUPPORT_OUTPUTDIR=$(BUILD_OUTPUT)/make-support
 # This does not get overridden in a bootcycle build
 CONFIGURESUPPORT_OUTPUTDIR:=@CONFIGURESUPPORT_OUTPUTDIR@
+BUILDJDK_OUTPUTDIR:=$(BUILD_OUTPUT)/buildjdk
 
 HOTSPOT_DIST=@HOTSPOT_DIST@
 
@@ -259,6 +268,7 @@ BUILD_HOTSPOT=@BUILD_HOTSPOT@
 BOOT_JDK:=@BOOT_JDK@
 
 BUILD_JDK:=@BUILD_JDK@
+CREATE_BUILDJDK:=@CREATE_BUILDJDK@
 
 # When compiling Java source to be run by the boot jdk
 # use these extra flags, eg -source 6 -target 6
@@ -394,6 +404,7 @@ LDFLAGS_TESTEXE_SUFFIX:=@LDFLAGS_TESTEXE_SUFFIX@
 # BUILD_CC/BUILD_LD is a compiler/linker that generates code that is runnable on the
 # build platform.
 BUILD_CC:=@FIXPATH@ @BUILD_CC@
+BUILD_CXX:=@FIXPATH@ @BUILD_CXX@
 BUILD_LD:=@FIXPATH@ @BUILD_LD@
 
 AS:=@FIXPATH@ @AS@
