Fixed windows build in gensrc

--- a/common/autoconf/spec.gmk.in
+++ b/common/autoconf/spec.gmk.in
@@ -407,6 +407,9 @@ BUILD_CC:=@FIXPATH@ @BUILD_CC@
 BUILD_CXX:=@FIXPATH@ @BUILD_CXX@
 BUILD_LD:=@FIXPATH@ @BUILD_LD@
 
+BUILD_SYSROOT_CFLAGS:=@BUILD_SYSROOT_CFLAGS@
+BUILD_SYSROOT_LDFLAGS:=@BUILD_SYSROOT_LDFLAGS@
+
 AS:=@FIXPATH@ @AS@
 
 # AR is used to create a static library (is ar in unix, lib.exe in windows)
