Some jar tool cleanup

--- a/src/jdk.jartool/share/classes/sun/tools/jar/resources/jar.properties
+++ b/src/jdk.jartool/share/classes/sun/tools/jar/resources/jar.properties
@@ -117,7 +117,7 @@ Example 2: use an existing manifest file 'mymanifest' and archive all the\n\
 main.usage.summary=\
 jar: You must specify one of -ctxui options.
 main.usage.summary.try=\
-Try `jar --help' or `jar --usage' for more information.
+Try `jar --help' for more information.
 
 main.help.preopt=\
 Usage: jar [OPTION...] [-C dir] files ...\n\
