jar tool: add option to print module descriptor

--- a/src/jdk.jartool/share/classes/sun/tools/jar/resources/jar.properties
+++ b/src/jdk.jartool/share/classes/sun/tools/jar/resources/jar.properties
@@ -60,6 +60,8 @@ error.module.options.without.info=\
         One of --module-version or --hash-dependences without module-info.class
 error.unexpected.module-info=\
         Unexpected module descriptor {0}
+error.module.descriptor.not.found=\
+        Module descriptor not found
 error.missing.provider=\
         Service provider not found: {0}
 out.added.manifest=\
@@ -149,6 +151,8 @@ main.help.opt.main.update=\
 \    -u, --update               Update an existing jar archive
 main.help.opt.main.extract=\
 \    -x, --extract              Extract named (or all) files from the archive
+main.help.opt.main.print-module-descriptor=\
+\     , --print-module-descriptor    Print the module descriptor
 main.help.opt.any=\
 \  Operation modifiers valid in any mode:\n\
 \n\
