--- a/src/jdk.jlink/share/classes/jdk/tools/jlink/resources/jlink.properties
+++ b/src/jdk.jlink/share/classes/jdk/tools/jlink/resources/jlink.properties
@@ -33,6 +33,12 @@ main.opt.configuration=\
 main.command.files=\
 \  @<filename>                          Read options from file
 
+main.msg.bug=\
+An exception has occurred in jlink. \
+Please file a bug at the Java Bug Database (http://bugreport.java.com/bugreport/) \
+after checking the database for duplicates. \
+Include your program and the following diagnostic in your report.  Thank you.
+
 err.output.must.be.specified:--output must be specified
 err.modulepath.must.be.specified:--modulepath must be specified
 err.mods.must.be.specified:no modules specified to {0}
