--- a/src/jdk.jartool/share/classes/sun/tools/jar/resources/jar.properties
+++ b/src/jdk.jartool/share/classes/sun/tools/jar/resources/jar.properties
@@ -57,7 +57,7 @@ error.create.tempfile=\
 error.hash.dep=\
         Hashing module {0} dependences, unable to find module {1} on module path
 error.module.options.without.info=\
-        One of --module-version or --hash-dependences without module-info.class
+        One of --module-version or --hash-dependencies without module-info.class
 error.unexpected.module-info=\
         Unexpected module descriptor {0}
 error.module.descriptor.not.found=\
@@ -181,9 +181,9 @@ main.help.opt.create.update.no-manifest=\
 main.help.opt.create.update.module-version=\
 \      , --module-version=VERSION    The module version, when creating a modular\n\
 \                               jar, or updating a non-modular jar
-main.help.opt.create.update.hash-dependences=\
-\      , --hash-dependences=PATTERN  Compute and record the hashes of module\n\
-\                               dependences matched by the given pattern, when\n\
+main.help.opt.create.update.hash-dependencies=\
+\      , --hash-dependencies=PATTERN  Compute and record the hashes of module\n\
+\                               dependencies matched by the given pattern, when\n\
 \                               creating a modular jar, or updating a non-modular\n\
 \                               jar
 main.help.opt.create.update.modulepath=\
@@ -206,7 +206,7 @@ main.help.postopt=\
 \  located in the root of the given directories, or the root of the jar archive\n\
 \  itself. The following operations are only valid when creating a modular jar,\n\
 \  or updating an existing non-modular jar: '--module-version',\n\
-\  '--hash-dependences', and '--modulepath'.\n\
+\  '--hash-dependencies', and '--modulepath'.\n\
 \n\
 \  Mandatory or optional arguments to long options are also mandatory or optional\n\
 \  for any corresponding short options.\n\
