--- a/src/jdk.jlink/share/classes/jdk/tools/jmod/resources/jmod.properties
+++ b/src/jdk.jlink/share/classes/jdk/tools/jmod/resources/jmod.properties
@@ -23,7 +23,7 @@ main.opt.module-version= Module version
 main.opt.modulepath=Module path
 main.opt.main-class=Main class
 main.opt.main-class.arg=main-class
-main.opt.hash-dependences=Compute and record hashes of dependences matched by the pattern
+main.opt.hash-dependencies=Compute and record hashes of dependencies matched by the pattern
 
 err.classpath.must.be.specified=--class-path must be specified
 err.jmod.must.be.specified=jmod-file must be specified
@@ -33,7 +33,7 @@ err.invalid.version=invalid module version {0}
 err.output.must.be.specified:--output must be specified
 err.mods.must.be.specified:--mods must be specified
 err.cp.must.be.specified:--class-path must be specified
-err.modulepath.must.be.specified:--module-path must be specified when hashing dependences
+err.modulepath.must.be.specified:--module-path must be specified when hashing dependencies
 err.path.not.found=path not found: {0}
 err.path.not.valid=invalid path: {0}
 err.dir.not.empty=not empty: {0}
