Check jmod main-class value is legal

--- a/src/jdk.jlink/share/classes/jdk/tools/jmod/resources/jmod.properties
+++ b/src/jdk.jlink/share/classes/jdk/tools/jmod/resources/jmod.properties
@@ -22,7 +22,7 @@ main.opt.config=Location of user-editable config files
 main.opt.module-version= Module version
 main.opt.modulepath=Module path
 main.opt.main-class=Main class
-main.opt.main-class.arg=main-class
+main.opt.main-class.arg=class-name
 main.opt.hash-dependencies=Compute and record hashes of dependencies matched by the pattern
 
 err.classpath.must.be.specified=--class-path must be specified
@@ -34,6 +34,7 @@ err.output.must.be.specified:--output must be specified
 err.mods.must.be.specified:--mods must be specified
 err.cp.must.be.specified:--class-path must be specified
 err.modulepath.must.be.specified:--module-path must be specified when hashing dependencies
+err.invalid.main-class:invalid main-class name: {0}
 err.path.not.found=path not found: {0}
 err.path.not.valid=invalid path: {0}
 err.dir.not.empty=not empty: {0}
