Add byte order to jlink. Reviewed-by: alanb, chegar

--- a/src/jdk.jlink/share/classes/jdk/tools/jlink/resources/jlink.properties
+++ b/src/jdk.jlink/share/classes/jdk/tools/jlink/resources/jlink.properties
@@ -33,12 +33,17 @@ main.opt.configuration=\
 main.command.files=\
 \  @<filename>                          Read options from file
 
+main.opt.endian=\
+\  --endian <little|big>                Byte order of the generated jimage. \
+By default native order is used.
+
 main.msg.bug=\
 An exception has occurred in jlink. \
 Please file a bug at the Java Bug Database (http://bugreport.java.com/bugreport/) \
 after checking the database for duplicates. \
 Include your program and the following diagnostic in your report.  Thank you.
 
+err.unknown.byte.order:unknown byte order {0}
 err.output.must.be.specified:--output must be specified
 err.modulepath.must.be.specified:--modulepath must be specified
 err.mods.must.be.specified:no modules specified to {0}
