Drop support for JMOD files at run-time

--- a/src/jdk.jlink/share/classes/jdk/tools/jlink/resources/jlink.properties
+++ b/src/jdk.jlink/share/classes/jdk/tools/jlink/resources/jlink.properties
@@ -22,7 +22,7 @@ main.opt.addmods=\
 \  --addmods <mod>[,<mod>...]           Root modules to resolve
 
 main.opt.limitmods=\
-\  --limtmods <mod>[,<mod>...]          Limit the universe of observable modules
+\  --limitmods <mod>[,<mod>...]         Limit the universe of observable modules
 
 main.opt.output=\
 \  --output <path>                      Location of output path
