--- a/src/java.base/share/classes/sun/launcher/resources/launcher.properties
+++ b/src/java.base/share/classes/sun/launcher/resources/launcher.properties
@@ -165,4 +165,4 @@ java.launcher.javafx.error1=\
 java.launcher.module.error1=module {0} not on module path
 java.launcher.module.error2=module {0} does not define package for main class {1}
 java.launcher.module.error3=\
-    module {0} does not have a main-class, use -m <module>/<main-class>
+    module {0} does not have a MainClass attribute, use -m <module>/<main-class>
