Several jmod fixes: 8134847, 8134754 8134775, 8134753, 8134746, 8134745

--- a/src/jdk.jlink/share/classes/jdk/tools/jmod/resources/jmod.properties
+++ b/src/jdk.jlink/share/classes/jdk/tools/jmod/resources/jmod.properties
@@ -37,6 +37,8 @@ err.modulepath.must.be.specified:--module-path must be specified when hashing de
 err.invalid.main-class:invalid main-class name: {0}
 err.path.not.found=path not found: {0}
 err.path.not.valid=invalid path: {0}
+err.path.not.a.dir=path must be a directory: {0}
+err.invalid.class.path.entry=invalid class path entry: {0}
 err.dir.not.empty=not empty: {0}
 err.file.already.exists=file already exists: {0}
 err.jmod.not.found=no jmod file found: {0}
