DefaultImageBuilder refactored and exported. Plugin to remove commands. Required by packager. Contributed-by: danno.ferrin@oracle.com Reviewed-by: jfdenise

--- a/src/jdk.jlink/share/classes/jdk/tools/jlink/resources/plugins.properties
+++ b/src/jdk.jlink/share/classes/jdk/tools/jlink/resources/plugins.properties
@@ -46,6 +46,10 @@ strip-java-debug.description=Strip debug information from class files.
 
 strip-java-debug.argument=<on|off>
 
+strip-native-commands.description=Exclude native commands (such as java/java.exe) from the image.
+
+strip-native-commands.argument=<on|off>
+
 zip.argument=[comma separated list of resource paths]
 
 zip.description=ZIP Compression
