--- a/src/jdk.jlink/share/classes/jdk/tools/jlink/resources/plugins.properties
+++ b/src/jdk.jlink/share/classes/jdk/tools/jlink/resources/plugins.properties
@@ -1,3 +1,8 @@
+class-optim.description=Look for patterns that can be optimized.
+class-optim.class-optim-log-file=Path to a file to log applied optimizations results.
+class-optim.argument='':'' separated list of strategies. ''{0}'' to enable them all, \
+''{1}'' to only remove useless calls to Class.forName.
+
 compress-resources.compress-resources-level=<0|1|2>
 
 compress-resources.compress-resources-filter=<comma separated list of resource paths | path to a file containing the list of resource paths>
