Added comment to warn that forName folding plugin is experimental.

--- a/src/jdk.jlink/share/classes/jdk/tools/jlink/resources/plugins.properties
+++ b/src/jdk.jlink/share/classes/jdk/tools/jlink/resources/plugins.properties
@@ -1,4 +1,4 @@
-class-optim.description=Look for patterns that can be optimized.
+class-optim.description=Look for patterns that can be optimized. Warning: This plugin is experimental.
 class-optim.class-optim-log-file=Path to a file to log applied optimizations results.
 class-optim.argument='':'' separated list of strategies. ''{0}'' to enable them all, \
 ''{1}'' to only remove useless calls to Class.forName.
